[gd_scene load_steps=15 format=4 uid="uid://dxculclmuht8m"]

[ext_resource type="PackedScene" uid="uid://drwpijhad8ye1" path="res://src/scene/game/base/forest_scene.tscn" id="1_y2eja"]
[ext_resource type="Script" uid="uid://bgets8bfhilxw" path="res://src/scene/game/scene_17.gd" id="2_1orx3"]
[ext_resource type="PackedScene" uid="uid://bictjaq7mapmy" path="res://src/scene/teleporter.tscn" id="3_ko8j7"]
[ext_resource type="Shader" uid="uid://d003qi8qm71iu" path="res://src/asset/shader/hurt_flash.gdshader" id="4_7122g"]
[ext_resource type="PackedScene" uid="uid://dhp3xvkqaqrid" path="res://src/scene/entry_point.tscn" id="4_otdv2"]
[ext_resource type="PackedScene" uid="uid://chvi7bc58s56r" path="res://src/unit/props/breakable_object.tscn" id="4_w5sb0"]
[ext_resource type="PackedScene" uid="uid://nkpduwg566ve" path="res://src/unit/character/enemy/boss/watermelon/watermelon.tscn" id="5_7122g"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0yjey"]
resource_local_to_scene = true
shader = ExtResource("4_7122g")
shader_parameter/flash_amount = 0.0
shader_parameter/flash_color = Color(1, 1, 1, 1)

[sub_resource type="Animation" id="Animation_p657q"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Units/Enemies/Watermelon:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(432, 80)]
}

[sub_resource type="Animation" id="Animation_2iedh"]
resource_name = "boss_defeat"
length = 1.5
step = 0.05
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1.1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"animation_remove_broken_wall"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Units/Enemies/Watermelon:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(52, 184), Vector2(432, 184)]
}

[sub_resource type="Animation" id="Animation_d7265"]
resource_name = "boss_jump_and_trans"
length = 0.4
step = 0.05
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.15, 0.35),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"play_boss_fall"
}, {
"args": [],
"method": &"play_boss_idle"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Units/Enemies/Watermelon:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(288, 184), Vector2(288, 176), Vector2(288, 172), Vector2(288, 170), Vector2(288, 172), Vector2(288, 176), Vector2(288, 184)]
}

[sub_resource type="Animation" id="Animation_sogss"]
resource_name = "boss_roll_to_jump_point"
length = 0.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Units/Enemies/Watermelon:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(432, 80), Vector2(352, 80)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5ubu0"]
_data = {
&"RESET": SubResource("Animation_p657q"),
&"boss_defeat": SubResource("Animation_2iedh"),
&"boss_jump_and_trans": SubResource("Animation_d7265"),
&"boss_roll_to_jump_point": SubResource("Animation_sogss")
}

[sub_resource type="SegmentShape2D" id="SegmentShape2D_56sk0"]
b = Vector2(0, -184)

[node name="Scene17" instance=ExtResource("1_y2eja")]
script = ExtResource("2_1orx3")
custom_explore = true

[node name="Tile" parent="Background/Prop" index="0"]
tile_map_data = PackedByteArray("AAAwABcAAQAJAAMAAAAwABYAAQAKAAEAAAAwABUAAQAJAAIAAAAwABQAAQAKAAEAAAAwABMAAQAJAAIAAAAwABIAAQAJAAYAAAAwABEAAQAKAAUAAAAwABAAAQAKAAAAAAAvABcAAQAJAAcAAAAvABYAAQAKAAUAAAAvABUAAQAKAAUAAAAvABQAAQAKAAEAAAAvABMAAQAKAAUAAAAvABIAAQAKAAUAAAAvABEAAQAJAAYAAAAvABAAAQAKAAAAAAAuABcAAQAJAAcAAAAuABYAAQAKAAUAAAAuABUAAQAKAAUAAAAuABQAAQAKAAEAAAAuABMAAQAKAAUAAAAuABIAAQAJAAIAAAAuABEAAQAJAAIAAAAuABAAAQAKAAAAAAAtABcAAQAJAAcAAAAtABYAAQAJAAIAAAAtABUAAQAJAAIAAAAtABQAAQAKAAEAAAAtABMAAQAJAAIAAAAtABIAAQAJAAYAAAAtABEAAQAJAAIAAAAtABAAAQAKAAQAAAAsABcAAQAJAAMAAAAsABYAAQAJAAYAAAAsABUAAQAKAAUAAAAsABQAAQAKAAUAAAAsABMAAQAKAAEAAAAsABIAAQAKAAUAAAAsABEAAQAJAAYAAAAsABAAAQAGAAEAAAAsAA8AAQALAAYAAAAsAA4AAQALAAIAAAAsAA0AAQALAAYAAAAsAAwAAQALAAIAAAAsAAsAAQALAAYAAAAsAAoAAQALAAAAAAArABcAAQAJAAMAAAArABYAAQAKAAEAAAArABUAAQAJAAIAAAArABQAAQAKAAUAAAArABMAAQAKAAEAAAArABIAAQAJAAYAAAArABEAAQAJAAYAAAArABAAAQAJAAYAAAArAA8AAQAJAAYAAAArAA4AAQAKAAUAAAArAA0AAQAJAAIAAAArAAwAAQAKAAEAAAArAAsAAQAJAAIAAAArAAoAAQAKAAQAAAAqABcAAQAJAAcAAAAqABYAAQAJAAIAAAAqABUAAQAJAAYAAAAqABQAAQAJAAIAAAAqABMAAQAKAAEAAAAqABIAAQAJAAYAAAAqABEAAQAKAAUAAAAqABAAAQAKAAUAAAAqAA8AAQAJAAIAAAAqAA4AAQAKAAUAAAAqAA0AAQAJAAYAAAAqAAwAAQAKAAUAAAAqAAsAAQAJAAIAAAAqAAoAAQAKAAAAAAApABcAAQAJAAMAAAApABYAAQAJAAYAAAApABUAAQAJAAYAAAApABQAAQAJAAYAAAApABMAAQAKAAUAAAApABIAAQAJAAIAAAApABEAAQAJAAYAAAApABAAAQAKAAUAAAApAA8AAQAKAAUAAAApAA4AAQAJAAIAAAApAA0AAQAJAAYAAAApAAwAAQAKAAUAAAApAAsAAQAJAAIAAAApAAoAAQAKAAQAAAAoABcAAQAJAAcAAAAoABYAAQAJAAYAAAAoABUAAQAJAAIAAAAoABQAAQAKAAUAAAAoABMAAQAKAAUAAAAoABIAAQAKAAEAAAAoABEAAQAKAAEAAAAoABAAAQAJAAYAAAAoAA8AAQAKAAEAAAAoAA4AAQAKAAEAAAAoAA0AAQAKAAEAAAAoAAwAAQAJAAYAAAAoAAsAAQAJAAIAAAAoAAoAAQAKAAAAAAAnABcAAQAJAAcAAAAnABYAAQAJAAIAAAAnABUAAQAKAAEAAAAnABQAAQAKAAEAAAAnABMAAQAJAAIAAAAnABIAAQAKAAUAAAAnABEAAQAJAAYAAAAnABAAAQAKAAUAAAAnAA8AAQAJAAIAAAAnAA4AAQAJAAYAAAAnAA0AAQAKAAUAAAAnAAwAAQAKAAEAAAAnAAsAAQAKAAUAAAAnAAoAAQAKAAQAAAAmABcAAQAJAAMAAAAmABYAAQAJAAYAAAAmABUAAQAKAAUAAAAmABQAAQAJAAIAAAAmABMAAQAKAAUAAAAmABIAAQAJAAIAAAAmABEAAQAKAAUAAAAmABAAAQAKAAUAAAAmAA8AAQAJAAYAAAAmAA4AAQAKAAUAAAAmAA0AAQAKAAUAAAAmAAwAAQAJAAIAAAAmAAsAAQAJAAIAAAAmAAoAAQAKAAQAAAAlABcAAQAJAAMAAAAlABYAAQAJAAIAAAAlABUAAQAKAAEAAAAlABQAAQAJAAYAAAAlABMAAQAKAAEAAAAlABIAAQAJAAYAAAAlABEAAQAJAAYAAAAlABAAAQAKAAEAAAAlAA8AAQAKAAUAAAAlAA4AAQAJAAYAAAAlAA0AAQAKAAEAAAAlAAwAAQAJAAYAAAAlAAsAAQAKAAEAAAAlAAoAAQAKAAQAAAAkABcAAQAJAAMAAAAkABYAAQAKAAEAAAAkABUAAQAKAAEAAAAkABQAAQAKAAUAAAAkABMAAQAJAAIAAAAkABIAAQAJAAIAAAAkABEAAQAKAAUAAAAkABAAAQAKAAUAAAAkAA8AAQAKAAEAAAAkAA4AAQAJAAIAAAAkAA0AAQAKAAUAAAAkAAwAAQAKAAEAAAAkAAsAAQAKAAEAAAAkAAoAAQAKAAQAAAAjABcAAQAJAAMAAAAjABYAAQAJAAYAAAAjABUAAQAJAAIAAAAjABQAAQAJAAYAAAAjABMAAQAJAAYAAAAjABIAAQAJAAYAAAAjABEAAQAKAAEAAAAjABAAAQAJAAIAAAAjAA8AAQAJAAIAAAAjAA4AAQAKAAUAAAAjAA0AAQAKAAEAAAAjAAwAAQAJAAIAAAAjAAsAAQAKAAUAAAAjAAoAAQAKAAAAAAAiABcAAQAJAAMAAAAiABYAAQAKAAUAAAAiABUAAQAKAAEAAAAiABQAAQAKAAUAAAAiABMAAQAKAAEAAAAiABIAAQAKAAUAAAAiABEAAQAJAAYAAAAiABAAAQAJAAIAAAAiAA8AAQAJAAIAAAAiAA4AAQAJAAIAAAAiAA0AAQAKAAEAAAAiAAwAAQAJAAIAAAAiAAsAAQAKAAUAAAAiAAoAAQAKAAQAAAAhABcAAQAJAAMAAAAhABYAAQAKAAUAAAAhABUAAQAJAAYAAAAhABQAAQAKAAUAAAAhABMAAQAKAAUAAAAhABIAAQAJAAYAAAAhABEAAQAJAAYAAAAhABAAAQAJAAYAAAAhAA8AAQAJAAYAAAAhAA4AAQAJAAYAAAAhAA0AAQAKAAUAAAAhAAwAAQAKAAEAAAAhAAsAAQAKAAEAAAAhAAoAAQAKAAQAAAAgABcAAQAJAAcAAAAgABYAAQAKAAUAAAAgABUAAQAJAAYAAAAgABQAAQAJAAYAAAAgABMAAQAJAAIAAAAgABIAAQAKAAEAAAAgABEAAQAKAAEAAAAgABAAAQAKAAUAAAAgAA8AAQAKAAUAAAAgAA4AAQAJAAIAAAAgAA0AAQAJAAYAAAAgAAwAAQAJAAIAAAAgAAsAAQAJAAIAAAAgAAoAAQAKAAAAAAAfABcAAQAJAAMAAAAfABYAAQAKAAEAAAAfABUAAQAJAAYAAAAfABQAAQAKAAUAAAAfABMAAQAJAAYAAAAfABIAAQAJAAYAAAAfABEAAQAKAAUAAAAfABAAAQAKAAUAAAAfAA8AAQAJAAYAAAAfAA4AAQAKAAEAAAAfAA0AAQAKAAUAAAAfAAwAAQAJAAYAAAAfAAsAAQAJAAIAAAAfAAoAAQAKAAAAAAAeABcAAQAJAAMAAAAeABYAAQAKAAUAAAAeABUAAQAJAAYAAAAeABQAAQAKAAEAAAAeABMAAQAJAAIAAAAeABIAAQAKAAUAAAAeABEAAQAJAAYAAAAeABAAAQAKAAUAAAAeAA8AAQAJAAYAAAAeAA4AAQAKAAUAAAAeAA0AAQAKAAEAAAAeAAwAAQAJAAIAAAAeAAsAAQAKAAUAAAAeAAoAAQAKAAAAAAAdABcAAQAJAAcAAAAdABYAAQAKAAEAAAAdABUAAQAKAAUAAAAdABQAAQAKAAEAAAAdABMAAQAJAAIAAAAdABIAAQAJAAYAAAAdABEAAQAKAAEAAAAdABAAAQAJAAIAAAAdAA8AAQAKAAEAAAAdAA4AAQAJAAYAAAAdAA0AAQAKAAUAAAAdAAwAAQAJAAYAAAAdAAsAAQAJAAYAAAAdAAoAAQAKAAQAAAAcABcAAQAJAAMAAAAcABYAAQAJAAIAAAAcABUAAQAKAAEAAAAcABQAAQAJAAYAAAAcABMAAQAKAAEAAAAcABIAAQAJAAIAAAAcABEAAQAKAAEAAAAcABAAAQAJAAIAAAAcAA8AAQAJAAYAAAAcAA4AAQAJAAIAAAAcAA0AAQAJAAYAAAAcAAwAAQAKAAUAAAAcAAsAAQAJAAYAAAAcAAoAAQAKAAQAAAAbABcAAQAJAAcAAAAbABYAAQAJAAYAAAAbABUAAQAJAAYAAAAbABQAAQAKAAUAAAAbABMAAQAJAAYAAAAbABIAAQAKAAUAAAAbABEAAQAJAAYAAAAbABAAAQAKAAEAAAAbAA8AAQAJAAIAAAAbAA4AAQAKAAUAAAAbAA0AAQAKAAEAAAAbAAwAAQAKAAEAAAAbAAsAAQAKAAUAAAAbAAoAAQAKAAQAAAAaABcAAQAJAAMAAAAaABYAAQAKAAEAAAAaABUAAQAJAAYAAAAaABQAAQAKAAUAAAAaABMAAQAKAAEAAAAaABIAAQAKAAUAAAAaABEAAQAJAAYAAAAaABAAAQAKAAEAAAAaAA8AAQAJAAIAAAAaAA4AAQAJAAIAAAAaAA0AAQAJAAYAAAAaAAwAAQAKAAUAAAAaAAsAAQAKAAEAAAAaAAoAAQAKAAQAAAAZABcAAQAJAAMAAAAZABYAAQAKAAUAAAAZABUAAQAKAAUAAAAZABQAAQAKAAUAAAAZABMAAQAKAAEAAAAZABIAAQAJAAYAAAAZABEAAQAKAAUAAAAZABAAAQAKAAUAAAAZAA8AAQAJAAIAAAAZAA4AAQAKAAEAAAAZAA0AAQAJAAYAAAAZAAwAAQAKAAEAAAAZAAsAAQAKAAEAAAAZAAoAAQAKAAAAAAAYABcAAQAJAAMAAAAYABYAAQAJAAIAAAAYABUAAQAKAAUAAAAYABQAAQAJAAIAAAAYABMAAQAKAAUAAAAYABIAAQAKAAUAAAAYABEAAQAKAAEAAAAYABAAAQAKAAEAAAAYAA8AAQAKAAUAAAAYAA4AAQAJAAYAAAAYAA0AAQAJAAYAAAAYAAwAAQAJAAIAAAAYAAsAAQAKAAUAAAAYAAoAAQAKAAAAAAAXABcAAQAJAAMAAAAXABYAAQAJAAIAAAAXABUAAQAJAAIAAAAXABQAAQAKAAEAAAAXABMAAQAJAAYAAAAXABIAAQAKAAUAAAAXABEAAQAJAAIAAAAXABAAAQAKAAUAAAAXAA8AAQAJAAYAAAAXAA4AAQAKAAUAAAAXAA0AAQAJAAYAAAAXAAwAAQAJAAYAAAAXAAsAAQAKAAUAAAAXAAoAAQAKAAQAAAAWABcAAQAJAAMAAAAWABYAAQAJAAIAAAAWABUAAQAJAAYAAAAWABQAAQAKAAEAAAAWABMAAQAJAAIAAAAWABIAAQAKAAEAAAAWABEAAQAKAAUAAAAWABAAAQAJAAYAAAAWAA8AAQAJAAYAAAAWAA4AAQAJAAYAAAAWAA0AAQAKAAUAAAAWAAwAAQAKAAUAAAAWAAsAAQAJAAIAAAAWAAoAAQAKAAQAAAAVABcAAQAJAAMAAAAVABYAAQAJAAYAAAAVABUAAQAJAAIAAAAVABQAAQAJAAYAAAAVABMAAQAKAAUAAAAVABIAAQAJAAIAAAAVABEAAQAJAAIAAAAVABAAAQAJAAIAAAAVAA8AAQAKAAUAAAAVAA4AAQAKAAUAAAAVAA0AAQAKAAEAAAAVAAwAAQAKAAUAAAAVAAsAAQAJAAIAAAAVAAoAAQAKAAAAAAAUABcAAQAJAAMAAAAUABYAAQAJAAYAAAAUABUAAQAKAAUAAAAUABQAAQAJAAYAAAAUABMAAQAKAAEAAAAUABIAAQAKAAUAAAAUABEAAQAKAAEAAAAUABAAAQAKAAUAAAAUAA8AAQAJAAIAAAAUAA4AAQAKAAEAAAAUAA0AAQAJAAIAAAAUAAwAAQAJAAIAAAAUAAsAAQAJAAIAAAAUAAoAAQAKAAQAAAATABcAAQAJAAMAAAATABYAAQAKAAEAAAATABUAAQAKAAEAAAATABQAAQAKAAUAAAATABMAAQAJAAIAAAATABIAAQAJAAYAAAATABEAAQAJAAYAAAATABAAAQAJAAYAAAATAA8AAQAJAAYAAAATAA4AAQAJAAIAAAATAA0AAQAKAAEAAAATAAwAAQAKAAUAAAATAAsAAQAKAAUAAAATAAoAAQAKAAQAAAASABcAAQAJAAMAAAASABYAAQAKAAUAAAASABUAAQAJAAYAAAASABQAAQAKAAUAAAASABMAAQAJAAYAAAASABIAAQAJAAYAAAASABEAAQAKAAEAAAASABAAAQAJAAIAAAASAA8AAQAKAAEAAAASAA4AAQAJAAYAAAASAA0AAQAJAAIAAAASAAwAAQAKAAEAAAASAAsAAQAJAAIAAAASAAoAAQAKAAAAAAARABcAAQAJAAcAAAARABYAAQAKAAUAAAARABUAAQAJAAYAAAARABQAAQAJAAIAAAARABMAAQAJAAIAAAARABIAAQAKAAEAAAARABEAAQAJAAYAAAARABAAAQAKAAEAAAARAA8AAQAKAAUAAAARAA4AAQAKAAUAAAARAA0AAQAKAAEAAAARAAwAAQAJAAYAAAARAAsAAQAJAAIAAAARAAoAAQAKAAAAAAAQABcAAQAJAAcAAAAQABYAAQAJAAYAAAAQABUAAQAJAAIAAAAQABQAAQAKAAEAAAAQABMAAQAJAAYAAAAQABIAAQAKAAEAAAAQABEAAQAKAAUAAAAQABAAAQAKAAUAAAAQAA8AAQAJAAYAAAAQAA4AAQAJAAIAAAAQAA0AAQAJAAYAAAAQAAwAAQAJAAIAAAAQAAsAAQAKAAEAAAAQAAoAAQAKAAAAAAAPABcAAQAJAAcAAAAPABYAAQAKAAUAAAAPABUAAQAKAAUAAAAPABQAAQAJAAYAAAAPABMAAQAJAAIAAAAPABIAAQAKAAUAAAAPABEAAQAJAAYAAAAPABAAAQAJAAYAAAAPAA8AAQAKAAEAAAAPAA4AAQAKAAEAAAAPAA0AAQAKAAUAAAAPAAwAAQAKAAEAAAAPAAsAAQAKAAUAAAAPAAoAAQAKAAAAAAAOABcAAQAJAAcAAAAOABYAAQAKAAUAAAAOABUAAQAKAAEAAAAOABQAAQAKAAEAAAAOABMAAQAJAAIAAAAOABIAAQAJAAYAAAAOABEAAQAJAAYAAAAOABAAAQAJAAYAAAAOAA8AAQAKAAUAAAAOAA4AAQAKAAEAAAAOAA0AAQAKAAUAAAAOAAwAAQAJAAYAAAAOAAsAAQAJAAIAAAAOAAoAAQAKAAQAAAANABcAAQAJAAcAAAANABYAAQAJAAIAAAANABUAAQAJAAIAAAANABQAAQAKAAEAAAANABMAAQAKAAEAAAANABIAAQAJAAYAAAANABEAAQAKAAEAAAANABAAAQAKAAUAAAANAA8AAQAJAAYAAAANAA4AAQAJAAIAAAANAA0AAQAJAAIAAAANAAwAAQAJAAIAAAANAAsAAQAJAAIAAAANAAoAAQAKAAQAAAAMABcAAQAJAAcAAAAMABYAAQAJAAYAAAAMABUAAQAJAAYAAAAMABQAAQAKAAUAAAAMABMAAQAJAAIAAAAMABIAAQAKAAEAAAAMABEAAQAJAAYAAAAMABAAAQAKAAEAAAAMAA8AAQAKAAUAAAAMAA4AAQAKAAEAAAAMAA0AAQAJAAYAAAAMAAwAAQAJAAYAAAAMAAsAAQAKAAUAAAAMAAoAAQAKAAAAAAALABcAAQAJAAcAAAALABYAAQAJAAYAAAALABUAAQAKAAEAAAALABQAAQAKAAEAAAALABMAAQAJAAIAAAALABIAAQAKAAUAAAALABEAAQAJAAIAAAALABAAAQAKAAEAAAALAA8AAQAJAAYAAAALAA4AAQAJAAYAAAALAA0AAQAKAAUAAAALAAwAAQAKAAUAAAALAAsAAQAKAAEAAAALAAoAAQAKAAAAAAAKABcAAQAJAAcAAAAKABYAAQAJAAIAAAAKABUAAQAKAAUAAAAKABQAAQAKAAEAAAAKABMAAQAJAAIAAAAKABIAAQAKAAUAAAAKABEAAQAJAAYAAAAKABAAAQAJAAIAAAAKAA8AAQAKAAUAAAAKAA4AAQAJAAYAAAAKAA0AAQAJAAYAAAAKAAwAAQAJAAYAAAAKAAsAAQAKAAEAAAAKAAoAAQAKAAQAAAAJABcAAQAJAAcAAAAJABYAAQAJAAYAAAAJABUAAQAKAAUAAAAJABQAAQAJAAIAAAAJABMAAQAJAAYAAAAJABIAAQAKAAEAAAAJABEAAQAJAAYAAAAJABAAAQAKAAUAAAAJAA8AAQAJAAYAAAAJAA4AAQAKAAEAAAAJAA0AAQAKAAEAAAAJAAwAAQAKAAUAAAAJAAsAAQAJAAYAAAAJAAoAAQAKAAQAAAAIABcAAQAJAAcAAAAIABYAAQAJAAYAAAAIABUAAQAKAAEAAAAIABQAAQAJAAIAAAAIABMAAQAJAAYAAAAIABIAAQAKAAEAAAAIABEAAQAJAAIAAAAIABAAAQAKAAUAAAAIAA8AAQAKAAEAAAAIAA4AAQAKAAUAAAAIAA0AAQAJAAIAAAAIAAwAAQAJAAIAAAAIAAsAAQAJAAIAAAAIAAoAAQAKAAAAAAAHABcAAQAJAAcAAAAHABYAAQAKAAEAAAAHABUAAQAKAAUAAAAHABQAAQAJAAYAAAAHABMAAQAKAAUAAAAHABIAAQAJAAYAAAAHABEAAQAKAAUAAAAHABAAAQAKAAEAAAAHAA8AAQAJAAYAAAAHAA4AAQAJAAYAAAAHAA0AAQAKAAEAAAAHAAwAAQAKAAUAAAAHAAsAAQAJAAYAAAAHAAoAAQAKAAQAAAAGABcAAQAJAAcAAAAGABYAAQAKAAEAAAAGABUAAQAKAAEAAAAGABQAAQAJAAYAAAAGABMAAQAKAAUAAAAGABIAAQAJAAIAAAAGABEAAQAJAAYAAAAGABAAAQAKAAUAAAAGAA8AAQAJAAIAAAAGAA4AAQAJAAIAAAAGAA0AAQAKAAUAAAAGAAwAAQAKAAEAAAAGAAsAAQAJAAIAAAAGAAoAAQAKAAAAAAAFABcAAQAJAAMAAAAFABYAAQAKAAUAAAAFABUAAQAKAAUAAAAFABQAAQAKAAUAAAAFABMAAQAKAAUAAAAFABIAAQAJAAIAAAAFABEAAQAJAAYAAAAFABAAAQAJAAIAAAAFAA8AAQAJAAIAAAAFAA4AAQAKAAUAAAAFAA0AAQAJAAIAAAAFAAwAAQAJAAIAAAAFAAsAAQAKAAUAAAAFAAoAAQAKAAQAAAAEABcAAQAJAAcAAAAEABYAAQAKAAEAAAAEABUAAQAKAAUAAAAEABQAAQAKAAEAAAAEABMAAQAKAAUAAAAEABIAAQAJAAYAAAAEABEAAQAKAAEAAAAEABAAAQAJAAYAAAAEAA8AAQAJAAYAAAAEAA4AAQAJAAYAAAAEAA0AAQAKAAUAAAAEAAwAAQAKAAEAAAAEAAsAAQAJAAYAAAAEAAoAAQAKAAQAAAADABcAAQAIAAMAAAADABYAAQAIAAEAAAADABUAAQAIAAUAAAADABQAAQAIAAUAAAADABMAAQAIAAUAAAADABIAAQAIAAEAAAADABEAAQAIAAEAAAADABAAAQAIAAEAAAADAA8AAQAIAAUAAAADAA4AAQAIAAUAAAADAA0AAQAIAAEAAAADAAwAAQAIAAEAAAADAAsAAQAIAAUAAAADAAoAAQAIAAQAAAAxABcAAQALAAMAAAAxABYAAQALAAIAAAAxABUAAQALAAIAAAAxABQAAQALAAIAAAAxABMAAQALAAYAAAAxABIAAQALAAIAAAAxABEAAQALAAYAAAAxABAAAQALAAAAAAA=")

[node name="GameTile" parent="." index="1"]
tile_map_data = PackedByteArray("AAD+/woAAAAFAAQAAAD//woAAAAKAAQAAAD//wsAAAAJAAIAAAD//wwAAAAKAAUAAAD//w0AAAAKAAUAAAD//w4AAAAJAAYAAAD//w8AAAAKAAUAAAD//xAAAAAKAAUAAAD//xEAAAAKAAEAAAD//xIAAAAJAAYAAAD//xMAAAAJAAYAAAD//xQAAAAKAAEAAAD//xUAAAAJAAIAAAD//xYAAAAKAAUAAAD//xcAAAAKAAUAAAD//xgAAAAKAAUAAAD//xkAAAAJAAIAAAD//xoAAAAKAAEAAAD//xsAAAAJAAYAAAAAAAoAAAAKAAQAAAAAAAsAAAAJAAIAAAAAAAwAAAAKAAEAAAAAAA0AAAAJAAIAAAAAAA4AAAAJAAIAAAAAAA8AAAAKAAUAAAAAABAAAAAJAAYAAAAAABEAAAAJAAIAAAAAABIAAAAJAAYAAAAAABMAAAAKAAUAAAAAABQAAAAKAAUAAAAAABUAAAAKAAEAAAAAABYAAAAJAAYAAAAAABcAAAAJAAYAAAAAABgAAAAJAAYAAAAAABkAAAAKAAEAAAAAABoAAAAJAAIAAAAAABsAAAAKAAUAAAABAAoAAAAKAAQAAAABAAsAAAAJAAIAAAABAAwAAAAJAAYAAAABAA0AAAAJAAIAAAABAA4AAAAJAAIAAAABAA8AAAAKAAUAAAABABAAAAAJAAIAAAABABEAAAAKAAEAAAABABIAAAAJAAIAAAABABMAAAAJAAIAAAABABQAAAAKAAEAAAABABUAAAAKAAUAAAABABYAAAAKAAEAAAABABcAAAAJAAYAAAABABgAAAAJAAYAAAABABkAAAAKAAEAAAABABoAAAAKAAUAAAABABsAAAAJAAYAAAACAAoAAAAKAAQAAAACAAsAAAAKAAUAAAACAAwAAAAJAAYAAAACAA0AAAAKAAEAAAACAA4AAAAKAAEAAAACAA8AAAAJAAIAAAACABAAAAAJAAIAAAACABEAAAAJAAIAAAACABIAAAAKAAEAAAACABMAAAAKAAEAAAACABQAAAAJAAIAAAACABUAAAAKAAEAAAACABYAAAAJAAYAAAACABcAAAAKAAUAAAACABgAAAAJAAIAAAACABkAAAAJAAYAAAACABoAAAAJAAIAAAACABsAAAAKAAEAAAADAAoAAAALAAQAAAADAAsAAAALAAIAAAADAAwAAAALAAYAAAADAA0AAAALAAIAAAADAA4AAAALAAYAAAADAA8AAAALAAYAAAADABAAAAALAAIAAAADABEAAAALAAIAAAADABIAAAALAAIAAAADABMAAAALAAYAAAADABQAAAALAAIAAAADABUAAAALAAYAAAADABYAAAALAAIAAAADABcAAAAGAAEAAAADABgAAAAKAAEAAAADABkAAAAKAAUAAAADABoAAAAKAAUAAAADABsAAAAKAAEAAAAEABcAAAAKAAAAAAAEABgAAAAJAAYAAAAEABkAAAAKAAUAAAAEABoAAAAJAAIAAAAEABsAAAAKAAEAAAAFABcAAAAKAAAAAAAFABgAAAAJAAYAAAAFABkAAAAKAAUAAAAFABoAAAAKAAEAAAAFABsAAAAJAAIAAAAGABcAAAAKAAQAAAAGABgAAAAKAAUAAAAGABkAAAAKAAUAAAAGABoAAAAKAAEAAAAGABsAAAAJAAIAAAAHABcAAAAKAAQAAAAHABgAAAAKAAUAAAAHABkAAAAKAAUAAAAHABoAAAAKAAUAAAAHABsAAAAJAAYAAAAIABcAAAAKAAQAAAAIABgAAAAJAAYAAAAIABkAAAAJAAYAAAAIABoAAAAJAAYAAAAIABsAAAAKAAEAAAAJABcAAAAKAAAAAAAJABgAAAAKAAUAAAAJABkAAAAKAAEAAAAJABoAAAAKAAEAAAAJABsAAAAJAAIAAAAKABcAAAAKAAAAAAAKABgAAAAKAAUAAAAKABkAAAAJAAIAAAAKABoAAAAKAAUAAAAKABsAAAAKAAUAAAALABcAAAAKAAQAAAALABgAAAAKAAUAAAALABkAAAAKAAUAAAALABoAAAAKAAEAAAALABsAAAAKAAUAAAAMABcAAAAKAAAAAAAMABgAAAAKAAEAAAAMABkAAAAJAAIAAAAMABoAAAAKAAUAAAAMABsAAAAKAAEAAAANABcAAAAKAAAAAAANABgAAAAKAAEAAAANABkAAAAKAAUAAAANABoAAAAJAAIAAAANABsAAAAKAAEAAAAOABcAAAAKAAAAAAAOABgAAAAKAAUAAAAOABkAAAAKAAEAAAAOABoAAAAKAAUAAAAOABsAAAAJAAYAAAAPABcAAAAKAAAAAAAPABgAAAAJAAYAAAAPABkAAAAJAAIAAAAPABoAAAAJAAYAAAAPABsAAAAKAAEAAAAQABcAAAAKAAQAAAAQABgAAAAKAAUAAAAQABkAAAAKAAUAAAAQABoAAAAJAAYAAAAQABsAAAAKAAUAAAARABcAAAAKAAQAAAARABgAAAAKAAEAAAARABkAAAAKAAUAAAARABoAAAAKAAEAAAARABsAAAAJAAYAAAASABcAAAAKAAAAAAASABgAAAAJAAYAAAASABkAAAAJAAYAAAASABoAAAAJAAIAAAASABsAAAAKAAUAAAATABcAAAAKAAQAAAATABgAAAAKAAUAAAATABkAAAAJAAIAAAATABoAAAAJAAIAAAATABsAAAAJAAIAAAAUABcAAAAKAAQAAAAUABgAAAAJAAIAAAAUABkAAAAJAAIAAAAUABoAAAAJAAIAAAAUABsAAAAKAAUAAAAVABcAAAAKAAQAAAAVABgAAAAJAAIAAAAVABkAAAAKAAUAAAAVABoAAAAKAAEAAAAVABsAAAAJAAIAAAAWABcAAAAKAAQAAAAWABgAAAAJAAYAAAAWABkAAAAKAAEAAAAWABoAAAAJAAIAAAAWABsAAAAKAAUAAAAXABcAAAAKAAAAAAAXABgAAAAJAAIAAAAXABkAAAAJAAYAAAAXABoAAAAJAAYAAAAXABsAAAAJAAIAAAAYABcAAAAKAAAAAAAYABgAAAAKAAUAAAAYABkAAAAJAAYAAAAYABoAAAAJAAIAAAAYABsAAAAKAAUAAAAZABcAAAAKAAQAAAAZABgAAAAJAAYAAAAZABkAAAAKAAUAAAAZABoAAAAKAAEAAAAZABsAAAAKAAUAAAAaABcAAAAKAAQAAAAaABgAAAAKAAEAAAAaABkAAAAKAAUAAAAaABoAAAAKAAEAAAAaABsAAAAJAAIAAAAbABcAAAAKAAAAAAAbABgAAAAKAAUAAAAbABkAAAAJAAYAAAAbABoAAAAJAAIAAAAbABsAAAAJAAYAAAAcABcAAAAKAAQAAAAcABgAAAAJAAYAAAAcABkAAAAKAAEAAAAcABoAAAAKAAUAAAAcABsAAAAJAAIAAAAdABcAAAAKAAQAAAAdABgAAAAKAAEAAAAdABkAAAAJAAIAAAAdABoAAAAJAAYAAAAdABsAAAAKAAEAAAAeABcAAAAKAAQAAAAeABgAAAAKAAEAAAAeABkAAAAJAAIAAAAeABoAAAAJAAYAAAAeABsAAAAKAAUAAAAfABcAAAAKAAAAAAAfABgAAAAJAAIAAAAfABkAAAAJAAYAAAAfABoAAAAJAAYAAAAfABsAAAAJAAIAAAAgABcAAAAKAAAAAAAgABgAAAAKAAEAAAAgABkAAAAKAAEAAAAgABoAAAAJAAYAAAAgABsAAAAKAAEAAAAhABcAAAAKAAAAAAAhABgAAAAKAAUAAAAhABkAAAAKAAUAAAAhABoAAAAKAAUAAAAhABsAAAAJAAYAAAAiABcAAAAKAAQAAAAiABgAAAAKAAUAAAAiABkAAAAKAAUAAAAiABoAAAAJAAIAAAAiABsAAAAJAAYAAAAjABcAAAAKAAQAAAAjABgAAAAKAAUAAAAjABkAAAAJAAYAAAAjABoAAAAKAAUAAAAjABsAAAAJAAYAAAAkABcAAAAKAAQAAAAkABgAAAAJAAIAAAAkABkAAAAKAAEAAAAkABoAAAAKAAEAAAAkABsAAAAKAAEAAAAlABcAAAAKAAQAAAAlABgAAAAJAAYAAAAlABkAAAAKAAUAAAAlABoAAAAKAAEAAAAlABsAAAAKAAEAAAAmABcAAAAKAAQAAAAmABgAAAAKAAEAAAAmABkAAAAKAAUAAAAmABoAAAAKAAEAAAAmABsAAAAJAAYAAAAnABcAAAAKAAAAAAAnABgAAAAKAAEAAAAnABkAAAAKAAUAAAAnABoAAAAKAAUAAAAnABsAAAAJAAYAAAAoABcAAAAKAAAAAAAoABgAAAAJAAIAAAAoABkAAAAJAAIAAAAoABoAAAAJAAYAAAAoABsAAAAKAAEAAAApABcAAAAKAAQAAAApABgAAAAJAAIAAAApABkAAAAKAAEAAAApABoAAAAKAAEAAAApABsAAAAJAAYAAAAqABcAAAAKAAQAAAAqABgAAAAKAAEAAAAqABkAAAAKAAEAAAAqABoAAAAJAAYAAAAqABsAAAAJAAIAAAArABcAAAAKAAQAAAArABgAAAAKAAUAAAArABkAAAAKAAEAAAArABoAAAAJAAIAAAArABsAAAAKAAEAAAAsAAoAAAAIAAAAAAAsAAsAAAAIAAEAAAAsAAwAAAAIAAUAAAAsAA0AAAAIAAUAAAAsAA4AAAAIAAUAAAAsAA8AAAAIAAUAAAAsABAAAAAIAAMAAAAsABcAAAAKAAQAAAAsABgAAAAJAAYAAAAsABkAAAAJAAIAAAAsABoAAAAKAAUAAAAsABsAAAAJAAIAAAAtAAoAAAAKAAAAAAAtAAsAAAAKAAUAAAAtAAwAAAAJAAYAAAAtAA0AAAAKAAEAAAAtAA4AAAAKAAUAAAAtAA8AAAAJAAIAAAAtABAAAAAJAAcAAAAtABcAAAAKAAQAAAAtABgAAAAJAAIAAAAtABkAAAAJAAIAAAAtABoAAAAKAAUAAAAtABsAAAAJAAYAAAAuAAoAAAAKAAQAAAAuAAsAAAAJAAIAAAAuAAwAAAAJAAIAAAAuAA0AAAAKAAEAAAAuAA4AAAAKAAUAAAAuAA8AAAAJAAIAAAAuABAAAAAJAAcAAAAuABcAAAAKAAAAAAAuABgAAAAKAAEAAAAuABkAAAAJAAIAAAAuABoAAAAKAAEAAAAuABsAAAAKAAEAAAAvAAoAAAAKAAQAAAAvAAsAAAAJAAIAAAAvAAwAAAAKAAUAAAAvAA0AAAAJAAYAAAAvAA4AAAAJAAIAAAAvAA8AAAAKAAUAAAAvABAAAAAJAAcAAAAvABcAAAAKAAAAAAAvABgAAAAKAAUAAAAvABkAAAAKAAEAAAAvABoAAAAJAAIAAAAvABsAAAAJAAIAAAAwAAoAAAAKAAAAAAAwAAsAAAAJAAIAAAAwAAwAAAAJAAYAAAAwAA0AAAAJAAIAAAAwAA4AAAAJAAYAAAAwAA8AAAAKAAEAAAAwABAAAAAJAAcAAAAwABcAAAAKAAQAAAAwABgAAAAKAAEAAAAwABkAAAAJAAIAAAAwABoAAAAJAAYAAAAwABsAAAAKAAEAAAAxAAoAAAAGAAAAAAAxABAAAAAGAAcAAAAxABcAAAAKAAQAAAAyAAoAAAACAAMAAAAyABAAAAACAAMAAAAyABcAAAAKAAQAAAAzAAoAAAACAAMAAAAzABAAAAACAAMAAAAzABcAAAAKAAAAAAA0AAoAAAACAAMAAAA0ABAAAAACAAMAAAA0ABcAAAAKAAAAAAA1AAoAAAACAAcAAAA1ABAAAAACAAcAAAA1ABcAAAAKAAAAAAA2AAoAAAACAAcAAAA2ABAAAAACAAMAAAA2ABcAAAAKAAAAAAA3AAoAAAACAAMAAAA3ABAAAAACAAMAAAA3ABcAAAAKAAAAAAA4AAoAAAACAAMAAAA4ABAAAAACAAMAAAA4ABcAAAAGAAQAAAAwAAEAAAAJAAcAAAAwAAAAAAAJAAIAAAAwAP//AAAJAAYAAAAvAAEAAAAJAAcAAAAvAAAAAAAKAAEAAAAvAP//AAAKAAUAAAAuAAEAAAAIAAcAAAAuAAAAAAAIAAUAAAAuAP//AAAIAAEAAAAuAPD/AAAAAAIAAAAuAPH/AAAAAAYAAAAuAPL/AAAAAAYAAAAuAPP/AAAAAAYAAAAuAPT/AAAAAAYAAAAuAPX/AAAAAAIAAAAuAPb/AAAAAAYAAAAuAPf/AAAAAAYAAAAuAPj/AAAAAAIAAAAuAPn/AAAAAAIAAAAuAPr/AAAAAAYAAAAuAPv/AAAAAAIAAAAuAPz/AAAAAAIAAAAuAP3/AAAAAAIAAAAuAP7/AAAEAAUAAAAxAAEAAAAGAAcAAAAyAAEAAAACAAcAAAAzAAEAAAACAAMAAAA0AAEAAAACAAMAAAA1AAEAAAACAAcAAAA2AAEAAAACAAMAAAA3AAEAAAACAAMAAAA4AAEAAAACAAcAAAABABwAAAAJAAMAAAAAABwAAAAJAAcAAAD//xwAAAAJAAMAAAD+/xwAAAAIAAcAAAD+/xsAAAAIAAEAAAD+/xoAAAAIAAUAAAD+/xkAAAAIAAEAAAD+/xgAAAAIAAUAAAD+/xcAAAAIAAUAAAD+/xYAAAAIAAUAAAD+/xUAAAAIAAEAAAD+/xQAAAAIAAUAAAD+/xMAAAAIAAUAAAD+/xIAAAAIAAEAAAD+/xEAAAAIAAUAAAD+/xAAAAAIAAEAAAD+/w8AAAAIAAEAAAD+/w4AAAAIAAUAAAD+/w0AAAAIAAEAAAD+/wwAAAAIAAUAAAD+/wsAAAAIAAUAAAAxABwAAAAJAAcAAAAxABsAAAAJAAIAAAAwABwAAAAJAAcAAAAvABwAAAAJAAcAAAAuABwAAAAJAAcAAAAtABwAAAAJAAcAAAAsABwAAAAJAAcAAAArABwAAAAJAAMAAAAqABwAAAAJAAMAAAApABwAAAAJAAMAAAAoABwAAAAJAAMAAAAnABwAAAAJAAcAAAAmABwAAAAJAAcAAAAlABwAAAAJAAcAAAAkABwAAAAJAAMAAAAjABwAAAAJAAMAAAAiABwAAAAJAAMAAAAhABwAAAAJAAcAAAAgABwAAAAJAAMAAAAfABwAAAAJAAMAAAAeABwAAAAJAAMAAAAdABwAAAAJAAMAAAAcABwAAAAJAAcAAAAbABwAAAAJAAcAAAAaABwAAAAJAAcAAAAZABwAAAAJAAcAAAAYABwAAAAJAAcAAAAXABwAAAAJAAMAAAAWABwAAAAJAAcAAAAVABwAAAAJAAcAAAAUABwAAAAJAAMAAAATABwAAAAJAAMAAAASABwAAAAJAAcAAAARABwAAAAJAAcAAAAQABwAAAAJAAcAAAAPABwAAAAJAAMAAAAOABwAAAAJAAcAAAANABwAAAAJAAcAAAAMABwAAAAJAAcAAAALABwAAAAJAAcAAAAKABwAAAAJAAMAAAAJABwAAAAJAAcAAAAIABwAAAAJAAcAAAAHABwAAAAJAAcAAAAGABwAAAAJAAcAAAAFABwAAAAJAAcAAAAEABwAAAAJAAMAAAADABwAAAAJAAMAAAACABwAAAAJAAcAAAAxABoAAAAKAAUAAAAxABkAAAAJAAIAAAAxABgAAAAKAAUAAAA4ABwAAAALAAMAAAA4ABsAAAALAAYAAAA4ABoAAAALAAIAAAA4ABkAAAALAAIAAAA4ABgAAAALAAIAAAA3ABwAAAAJAAMAAAA3ABsAAAAJAAYAAAA3ABoAAAAKAAEAAAA3ABkAAAAJAAYAAAA3ABgAAAAJAAIAAAA2ABwAAAAJAAMAAAA2ABsAAAAKAAUAAAA2ABoAAAAKAAUAAAA2ABkAAAAJAAIAAAA2ABgAAAAJAAYAAAA1ABwAAAAJAAMAAAA1ABsAAAAKAAEAAAA1ABoAAAAJAAYAAAA1ABkAAAAKAAEAAAA1ABgAAAAJAAYAAAA0ABwAAAAJAAMAAAA0ABsAAAAKAAUAAAA0ABoAAAAKAAEAAAA0ABkAAAAJAAYAAAA0ABgAAAAJAAIAAAAzABwAAAAJAAcAAAAzABsAAAAJAAYAAAAzABoAAAAKAAUAAAAzABkAAAAJAAYAAAAzABgAAAAKAAEAAAAyABwAAAAJAAcAAAAyABsAAAAKAAEAAAAyABoAAAAKAAEAAAAyABkAAAAKAAEAAAAyABgAAAAJAAIAAAAxAAAAAAALAAYAAAAxAP//AAALAAIAAAAxAP7/AAALAAAAAAAwAP7/AAAKAAQAAAAvAP7/AAAKAAQAAAAxAA8AAAALAAIAAAAxAA4AAAALAAYAAAAxAA0AAAALAAIAAAAxAAwAAAALAAYAAAAxAAsAAAALAAYAAAA5ABcAAAADAAYAAAA5ABYAAAAAAAIAAAA5ABUAAAAAAAYAAAA5ABQAAAAAAAIAAAA5ABMAAAAAAAYAAAA5ABIAAAAAAAYAAAA5ABEAAAAAAAIAAAA5ABAAAAADAAQAAAA5AAEAAAADAAQAAAA5AAIAAAAAAAIAAAA5AAMAAAAAAAYAAAA5AAQAAAAAAAYAAAA5AAUAAAAAAAIAAAA5AAYAAAAAAAIAAAA5AAcAAAAAAAIAAAA5AAgAAAAAAAIAAAA5AAkAAAAAAAIAAAA5AAoAAAADAAYAAAAuAOb/AAADAAQAAAAuAOf/AAAAAAYAAAAuAOj/AAAAAAIAAAAuAOn/AAAAAAYAAAAuAOr/AAAAAAIAAAAuAOv/AAAAAAYAAAAuAOz/AAAAAAIAAAAuAO3/AAAAAAYAAAAuAO7/AAAAAAIAAAAuAO//AAAAAAYAAAD9/+b/AAACAAMAAAD+/+b/AAACAAMAAAD//+b/AAACAAMAAAAAAOb/AAACAAcAAAABAOb/AAACAAcAAAACAOb/AAACAAcAAAADAOb/AAACAAMAAAAEAOb/AAACAAcAAAAFAOb/AAACAAcAAAAGAOb/AAACAAMAAAAHAOb/AAACAAcAAAAIAOb/AAACAAcAAAAJAOb/AAACAAcAAAAKAOb/AAACAAcAAAALAOb/AAACAAcAAAAMAOb/AAACAAcAAAANAOb/AAACAAMAAAAOAOb/AAACAAMAAAAPAOb/AAACAAMAAAAQAOb/AAACAAMAAAARAOb/AAACAAcAAAASAOb/AAACAAMAAAATAOb/AAACAAcAAAAUAOb/AAACAAcAAAAVAOb/AAACAAMAAAAWAOb/AAACAAcAAAAXAOb/AAACAAcAAAAYAOb/AAACAAMAAAAZAOb/AAACAAMAAAAaAOb/AAACAAMAAAAbAOb/AAACAAMAAAAcAOb/AAACAAMAAAAdAOb/AAACAAcAAAAeAOb/AAACAAMAAAAfAOb/AAACAAcAAAAgAOb/AAACAAMAAAAhAOb/AAACAAcAAAAiAOb/AAACAAcAAAAjAOb/AAACAAcAAAAkAOb/AAACAAcAAAAlAOb/AAACAAMAAAAmAOb/AAACAAcAAAAnAOb/AAACAAcAAAAoAOb/AAACAAcAAAApAOb/AAACAAMAAAAqAOb/AAACAAMAAAArAOb/AAACAAMAAAAsAOb/AAACAAMAAAAtAOb/AAACAAcAAAD8/woAAAABAAYAAAD8/wkAAAAAAAIAAAD8/wgAAAAAAAIAAAD8/wcAAAAAAAIAAAD8/wYAAAAAAAYAAAD8/wUAAAAAAAYAAAD8/wQAAAAAAAIAAAD8/wMAAAAAAAYAAAD8/wIAAAAAAAYAAAD8/wEAAAAAAAYAAAD8/wAAAAAAAAYAAAD8////AAAAAAYAAAD8//7/AAAAAAIAAAD8//3/AAAAAAIAAAD8//z/AAAAAAYAAAD8//v/AAAAAAYAAAD8//r/AAAAAAYAAAD8//n/AAAAAAIAAAD8//j/AAAAAAYAAAD8//f/AAAAAAYAAAD8//b/AAAAAAYAAAD8//X/AAAAAAIAAAD8//T/AAAAAAYAAAD8//P/AAAAAAIAAAD8//L/AAAAAAYAAAD8//H/AAAAAAIAAAD8//D/AAAAAAYAAAD8/+//AAAAAAIAAAD8/+7/AAAAAAIAAAD8/+3/AAAAAAIAAAD8/+z/AAAAAAIAAAD8/+v/AAAAAAIAAAD8/+r/AAAAAAYAAAD8/+n/AAAAAAIAAAD8/+j/AAAAAAYAAAD8/+f/AAAAAAYAAAD8/+b/AAABAAAAAAD9/woAAAACAAcAAAA=")

[node name="EndBlock" parent="Units" index="0" instance=ExtResource("4_w5sb0")]
material = SubResource("ShaderMaterial_0yjey")
position = Vector2(352, 136)
tile_map_data = PackedByteArray("AAAAAAAAAQAAAAAAAAAAAAEAAQAAAAAAAAAAAAIAAQAAAAAAAAAAAAMAAQAAAAAAAAAAAAQAAQAAAAAAAAAAAAUAAQAAAAAAAAABAAAAAQAAAAAAAAABAAEAAQAAAAAAAAABAAIAAQAAAAAAAAABAAMAAQAAAAAAAAABAAQAAQAAAAAAAAABAAUAAQAAAAAAAAACAAAAAQAAAAAAAAACAAEAAQAAAAAAAAACAAIAAQAAAAAAAAACAAMAAQAAAAAAAAACAAQAAQAAAAAAAAACAAUAAQAAAAAAAAADAAAAAQAAAAAAAAADAAEAAQAAAAAAAAADAAIAAQAAAAAAAAADAAMAAQAAAAAAAAADAAQAAQAAAAAAAAADAAUAAQAAAAAAAAAEAAAAAQAAAAAAAAAEAAEAAQAAAAAAAAAEAAIAAQAAAAAAAAAEAAMAAQAAAAAAAAAEAAQAAQAAAAAAAAAEAAUAAQAAAAAAAAA=")
can_break = false
particle_color = Color(0.4, 0.188235, 0.168627, 1)

[node name="Watermelon" parent="Units/Enemies" index="0" instance=ExtResource("5_7122g")]
position = Vector2(432, 80)

[node name="Player" parent="." index="3"]
position = Vector2(16, 80)

[node name="GameCamera" parent="." index="4"]
position = Vector2(16, 80)

[node name="LTeleporter" parent="Entrances" index="0" instance=ExtResource("3_ko8j7")]
position = Vector2(-16, 0)
target_scene = 16
target_entry_point = 4

[node name="EntryPoint" parent="Entrances/LTeleporter" index="1" instance=ExtResource("4_otdv2")]
position = Vector2(16, 80)

[node name="RTeleporter" parent="Entrances" index="1" instance=ExtResource("3_ko8j7")]
position = Vector2(400, 0)
target_scene = 18

[node name="EntryPoint" parent="Entrances/RTeleporter" index="1" instance=ExtResource("4_otdv2")]
position = Vector2(-16, 184)
location = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="7"]
libraries = {
&"": SubResource("AnimationLibrary_5ubu0")
}

[node name="PlayerChecker" type="Area2D" parent="." index="8"]
position = Vector2(80, 184)
collision_layer = 0
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerChecker" index="0"]
shape = SubResource("SegmentShape2D_56sk0")

[node name="JumpTargetPoint" type="Marker2D" parent="." index="9"]
position = Vector2(288, 184)

[connection signal="defeated" from="Units/Enemies/Watermelon" to="." method="_on_watermelon_defeated"]
[connection signal="body_entered" from="PlayerChecker" to="." method="_on_player_checker_body_entered"]
